cursive-bootstrap/tests/ui/E-TYP/E-TYP-1906.cursive
// RUN: compile-fail
// DIAG: E-TYP-1906
// SPEC: 8.15
// DESC: Field visibility exceeds record visibility

record Internal {  //~ ERROR E-TYP-1906: field visibility exceeds record
    public value: i32
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
